k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: auth-service
  template:
    metadata:
      labels:
        app: auth-service
    spec:
      containers:
        - name: auth-service
          image: 10.1.223.21:5000/auth-service:__TAG__
          imagePullPolicy: Always
          ports:
            - containerPort: 8081
          volumeMounts:
            - name: auth-storage
              mountPath: /data/auth
      volumes:
        - name: auth-storage
          persistentVolumeClaim:
            claimName: auth-pvc
